# cicc_9

./: README.md  无人机结构调研.md  算法推荐.md
code/: README.md  工程文件结构.txt
code/fire_detection_system/: CMakeLists.txt  README.md  detection_module.cpp  detection_module.h  fire_detection_system.cpp  thermal_module.cpp  thermal_module.h
code/fire_detection_system/get_heat/: main.cpp  makefile  readme.md
code/fire_detection_system/get_heat/functions/: MLX90640_I2C_Driver.cpp
code/fire_detection_system/get_heat/headers/: pseudo_color.h
code/fire_detection_system/object_detection/: main.cpp
code/get_heat/: mlx_app
code/object_detection/: README.md  main.cpp  nanodet.cpp
code/slaver_core_for_ultrasound/: openamp_core0.elf  readme.md  rpmsg  rpmsg.c
code/slaver_core_for_ultrasound/slaver_core_for_ultrasound/inc/: slaver_00_example.h
code/slaver_core_for_ultrasound/slaver_core_for_ultrasound/src/: slaver_00_example.c
code/源代码/get_heat/headers/: MLX90640_I2C_Driver.h
code/源代码/slaver_core_for_ultrasound/: rpmsg.c
code/源代码_初赛版本/: README.md
code/源代码_初赛版本/get_heat/functions/: MLX90640_I2C_Driver.cpp
code/源代码_初赛版本/slaver_core_for_ultrasound/slaver_core_for_ultrasound/: main.c  phytiumpi_aarch64_firefly_openamp_core0.map  sdkconfig
工程文件+初赛+CICC0900727/工程文件-总/get_heat/headers/: MLX90640_API.h
工程文件+初赛+CICC0900727/工程文件-总/object_detection/: README.md
工程文件+初赛+CICC0900727/工程文件-总/slaver_core_for_ultrasound/slaver_core_for_ultrasound/: Kconfig  ft_openamp.ld
工程文件+初赛+CICC0900727/工程文件-总/可执行文件汇总/: openamp_core0.elf
工程文件+初赛+CICC0900727/工程文件-总/源代码/: 工程文件结构.txt
(+10 files in other folders)
